@@ -11,12 +11,13 @@ Moritz Warning <mwarning@users.sourceforge.net>
 - multiple minor fixes
 aMule:
 - select right protocol version for aMule 2.2.5
+- fix settings
 Transmission:
 - support X-Transmission-Session-Id
    (fix errors from JsonParser)
 - better support for sub files
-- fix preview
-- fix settings
+- fix file preview
+- all settings are now manageable 
 Plex gui:
 - add l33t text transform for downloads
 - make number of displayed console lines configurable
